backend/vulnerability_analysis/testing/bof1/full/klee-out-0/test000001.user.err
Error: Wrong size given to klee_make_symbolic
File: final_tc/bof1_klee.c
Line: 12
assembly.ll line: 7821
State: 1
Stack: 
	#000007821 in input_task(138581976809472) at final_tc/bof1_klee.c:12
	#100008089 in __klee_posix_wrapped_main() at final_tc/bof1_klee.c:38
	#200006086 in __user_main(1, 139807653101568, 139807653101584) at src/runtime/POSIX/klee_init_env.c:245
	#300000540 in __uClibc_main(139791874129920, 1, 139807653101568, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#400000705 in main(1, 139807653101568)
